--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,15 @@ body {
 }
 
 .input-box {
+  border: 2px solid #212121;
   text-align: center;
   width: 250px;
   height: 25px;
+}
+
+.input-box:focus {
+  transition: 0.2s;
+  box-shadow: 0px 0px 8px 2px #fff;
 }
 
 #results-box {
@@ -70,7 +76,7 @@ body {
 #bill-total {
   position: relative;
   left: 80px;
-  padding-top: 25px;
+  padding-top: 40px;
 }
 
 #calculation {
@@ -89,10 +95,8 @@ body {
 }
 
 #calculate:hover {
-  transition: 0.25s;
-  border: 2px solid #fff;
-  background-color: #303030;
-  color: #fff;
+  transition: 0.2s;
+  box-shadow: 0px 0px 6px 2px #fff;
 }
 
 #calculate:focus {
