--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
 #tip-input {
   text-align: center;
   margin-top: 60px;
-  margin-bottom: 75px;
+  margin-bottom: 50px;
 }
 
 ::placeholder {
@@ -79,9 +79,9 @@ body {
   padding-top: 40px;
 }
 
-#calculation {
+#buttons {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 35px;
 }
 
 #calculate {
@@ -101,4 +101,26 @@ body {
 
 #calculate:focus {
   outline: none;
+}
+
+#reset {
+  display: block;
+  margin: auto;
+  margin-top: 25px;
+  background-color: #fff;
+  border-radius: 4px;
+  border: 2px solid #212121;
+  color: #212121;
+  width: 75px;
+  height: 25px;
+  font-size: 14px;
+}
+
+#reset:focus {
+  outline: none;
+}
+
+#reset:hover {
+  transition: 0.2s;
+  box-shadow: 0px 0px 4px 1px #fff;
 }
